#254 - Run product + refactor tests dependencies + increase JVM memory